# id3-tag-tool

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: main.rs
